@@ -10,6 +10,10 @@ may have moved code there.  Many features of Curio were simply
 higher-level modules implemented on top of an existing core and can be
 added back to your code without much effort. -- Dave
 
+04/10/2024 Removed run_in_executor().  If you want to wait on work
+           submitted to a traditional executor (from concurrent.futures),
+	   use curio.traps._future_wait().
+	   
 04/10/2024 Removed subprocess module.  Use the Python built-in instead.
            Old code found in examples/curio_subprocess.py
 	   
